2-App-Setup/argocd/resources/available/hubble-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  hostnames:
  - hubble.k8s.findichgut.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: central
    namespace: kube-system
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
